--- a/styles.scss
+++ b/styles.scss
@@ -17,6 +17,12 @@
 // ----------------------------------------
 //* Basic particles ---
 
+html {
+  scrollbar-width: none; 
+  &::-webkit-scrollbar { 
+    display: none;
+  }
+}
 
 $bg: #212121;
 body {
